<resources>
    <string name="app_name">CrowdCarry</string>

    <!-- Strings related to login -->
    <string name="prompt_phonenumber">PHONE</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_confirm_password">CONFIRM PASSWORD</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="prompt_fullname">FULL NAME</string>
    <string name="prompt_mobile_phonenumber">MOBILE NUMBER</string>
    <string name="prompt_otp">OTP</string>
    <string name="title">EMAIL</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_aadhar">AADHAR DOC</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="prompt_account">Do not have an account? </string>
    <string name="action_signup"> Sign up</string>
    <string name="prompt_signup_story">By continuing, you are agreeing to our</string>
    <string name="prompt_terms">Terms of services</string>
    <string name="prompt_signup_story1"> and</string>
    <string name="prompt_privacy">Privacy Policy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="deb_date">DEP. Date</string>
    <string name="deb_time">DEP. Time</string>
    <string name="arr_date">ARR. Date</string>
    <string name="arr_time">ARR. Time</string>
    <string name="prompt_wanttosend">Select</string>
    <string name="wanttosend">WANT TO SEND</string>
    <string name="next">NEXT</string>
    <string name="category">CATEGORY</string>
    <string name="weight">WEIGHT</string>
    <string name="volumetricweight">VOLUMETRIC WEIGHT</string>
    <string name="noofseat">NO. OF SEAT</string>
    <string name="action_notification">Notification</string>
    <string name="action_home">Home</string>
    <string name="pick_details">Pick Details</string>
    <string name="name">Name</string>
    <string name="flat_no">FLAT NO</string>
    <string name="address">ADDRESS</string>
    <string name="delivery_details">DELIVEY DETAILS</string>
    <string name="departure_from">DEPARTURE FROM</string>
    <string name="arrival_at">ARRIVAL AT</string>
    <string name="trip_summary">TRIP SUMMARY</string>
    <string name="departure_date_time">DEP. DATE and TIME</string>
    <string name="pickup_details">PICK UP DETAILS</string>
    <string name="proceed">PROCEED</string>
    <string name="stop_overs">STOP OVERS</string>
    <string name="or_enter">Or enter it manually</string>
    <string name="ready_to_carry">WANT TO SEND</string>
    <string name="article">Articles</string>
    <string name="passengers">Passengers</string>
    <string name="capacity">CAPACITY</string>
    <string name="continuetext">CONTINUE</string>
    <string name="action_contact_title">Write your comments below</string>
    <string name="action_send">SEND</string>
    <string name="action_save">SAVE</string>
    <string name="height">Heignt(cm)</string>
    <string name="width">Width(cm)</string>
    <string name="breadth">Breadth(cm)</string>
    <string name="dimension">DIMENSIONS</string>
    <string name="flatename">FLAT NAME</string>
    <string name="action_loaction">Enter your location</string>
    <string name="tv_phone_number">PHONE</string>
    <string name="total_price">Total Price</string>
    <string name="trip_details">Trip Detail</string>
    <string name="item_details">Item Details</string>
    <string name="duration">Duration</string>
    <string name="notify">NOTIFY</string>
    <string name="accept">ACCEPT</string>
    <string name="item">ITEM</string>
    <string name="order_created">Order Created</string>
    <string name="picked">Picked</string>
    <string name="intransit">Intransit</string>
    <string name="delivered">Delivered</string>
    <string name="title_senderlistactivity_list">Items</string>
    <string name="title_senderlistactivity_detail">SenderListActivity Detail</string>
    <string name="title_detail_list">Items</string>
    <string name="title_detail_detail">Detail Detail</string>
    <string name="title_carrier_list">Items</string>
    <string name="title_carrier_detail">Carrier Detail</string>
    <string name="title_activity_beacarrier">BEACARRIER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_carrier_summary_view">CarrierSummaryView</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_legal_list">Legals</string>
    <string name="title_legal_detail">Legal Detail</string>
    <string name="prompt_select_bank">Select Bank Name</string>
    <string name="title_activity_sender_order_second_page">SenderOrderSecondPage</string>
    <string name="title_activity_sender_order_summary">SenderOrderSummary</string>

    <string name="facebook_app_id">148420222383931</string>
    <string name="fb_login_protocol_scheme">fb148420222383931</string>
    <string name="title_wall_list">wall</string>
    <string name="title_wall_detail">Wall Detail</string>


    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">CrowdCarry</string>
    <string name="slide_1_desc">Helping common people earn money on the fly . Perfect crowdshipping platform and the first one in India</string>

    <string name="slide_2_title">Easy Process</string>
    <string name="slide_2_desc">Just create a carry request if you wish to earn . Create a send request if you want to send something</string>

    <string name="slide_3_title">Money Saver</string>
    <string name="slide_3_desc">Earn part of your travel expense by carrying something or someone and earn upto 70% of your travel expense</string>
    <string name="slide_4_title">Easy Payment</string>
    <string name="slide_4_desc">Update the bank details in your profile section . Payments will be credited within 3 days of you accepting the order.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


</resources>
