<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="sender"
            type="com.ucarry.developer.android.Model.SenderOrder" />

        <variable
            name="item"
            type="com.ucarry.developer.android.Model.ItemAttributes" />

        <variable
            name="pickup"
            type="com.ucarry.developer.android.Model.PickupOrderMapping" />

        <variable
            name="delivery"
            type="com.ucarry.developer.android.Model.ReceiverOrderMapping" />

        <variable
            name="senderorderitem"
            type="com.ucarry.developer.android.Model.SenderOrderItemAttributes" />

        <variable
            name="carrierattribute"
            type="com.ucarry.developer.android.Model.CarrierScheduleDetailAttributes" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:id="@+id/lila"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/scheduleform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="7dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/labelPickDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="50"
                    android:text="@string/trip_summary"
                    android:textColor="@color/textColorDark"
                    android:textSize="16dp" />


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelDepartureFrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:text="@string/departure_from"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/labelPickFlat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:text="@={sender.from_loc}"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/labelpickFlatFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelDepartureaAT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:text="@string/departure_date_time"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/labelDepartureAtst"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@{carrierattribute.displayStartTime ?? senderorderitem.displayStartTime }"

                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/labelDepartureDateForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelDepartureDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:text="@string/arrival_at"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/labelDepartureAtt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:text="@={sender.to_loc}"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/labelarrivaeDateForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelArrivalAt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:text="@string/arr_date"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/labelarrivalAtt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:text="@{carrierattribute.displayEndTime ?? senderorderitem.displayEndTime }"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelWantTo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@{sender.isSender ? @string/wanttosend : @string/ready_to_carry}"

                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/labelwantotsend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size"
                  android:text="@{carrierattribute.mode ?? senderorderitem.item_type}"
                        />

                    <!--android:text="@={senderorderitem.item_type}"-->
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@{sender.isSender ? @string/weight : @string/capacity}"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/labelweightvalue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@{carrierattribute.capacity ?? item.weight}"

                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                   >

                    <TextView
                        android:id="@+id/labelVolumetric"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@{sender.isSender ? @string/total_price : @string/noofseat}"
                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />

                    <TextView
                        android:id="@+id/labelvolume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@{sender.grandTotal}"

                        android:textColor="@color/textHintColor"
                        android:textSize="@dimen/font_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="19dp"
                    android:background="@color/textHintColor" />

                <LinearLayout
                    android:id="@+id/sender_flow_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{sender.isSender ? View.VISIBLE : View.GONE}">

                    <TextView
                        android:id="@+id/tvp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:text="@string/pickup_details"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvFromAddrese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:singleLine="false"
                        android:text="@={pickup.fullAdress}"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tvd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:text="@string/delivery_details"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvDeliveryAddressSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:singleLine="false"
                        android:text="@={delivery.fullAdress}"
                        android:textSize="15dp" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/carrier_flow_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{sender.isSender ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:id="@+id/tvStopOvers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:text="@string/stop_overs"
                        android:textColor="@color/textColorDark"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:id="@+id/carrier_stopovers_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                        ></LinearLayout>


                    <EditText
                        android:id="@+id/etToTime"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"

                        android:backgroundTint="@color/editTextSelected"
                        android:hint="@string/or_enter"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={sender.comments}"
                        android:textColor="@color/textColorDark"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="@dimen/font_size"
                        android:textStyle="bold" />
                </LinearLayout>
                <Button
                    android:id="@+id/btn_sender_next"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="27dp"
                    android:layout_marginTop="@dimen/button_gap"
                    android:background="@drawable/button_outline"
                    android:text="@string/proceed"
                    android:textColor="@color/textColorWhite"
                    android:textSize="@dimen/font_size_hint"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>